Altos bug-fix
Id automatico Produto, Leilao, Cadastro etc..

Arrumar tela de Login do usuario com problemmas

Terminar de verificar os lances se estao sendo feitos ou nao